# ecdsa-sol-proxy

./: .env.example  Anchor.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  knip.json  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: ci.yml
plan/: test-review.md
programs/ecdsa-proxy/: Cargo.toml
programs/ecdsa-proxy/src/: constants.rs  ecdsa.rs  error.rs  lib.rs  message.rs
programs/ecdsa-proxy/src/instructions/: close_wallet.rs  execute.rs  initialize_wallet.rs  mod.rs
programs/ecdsa-proxy/src/state/: mod.rs
tests/: ecdsa-proxy.ts  mpc-ecdsa-proxy.ts
tests/helpers/: evm-signer.ts  mpc-signer.ts
